data/derived/fa15/progs/unify/prog0253.ml.out
Characters 503-533:
  | Funny1(n)            -> (sqrt(abs_float(eval(n,x,y))))/1000.0;;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
